--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore model files
+mnist_cnn.pth
+
 # Python bytecode files
 *.pyc
 *.pyo
@@ -19,3 +22,6 @@ venv/
 
 # Ignore Jupyter notebook checkpoints
 .ipynb_checkpoints/
+
+# Ignore system-specific files (macOS example)
+.DS_Store
